// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly H1 1`] = `
<Text.H1>
  test
</Text.H1>
`;

exports[`renders correctly H1 darkGray 1`] = `
<Text.H1
  darkGray={true}
>
  test
</Text.H1>
`;

exports[`renders correctly H1 lightGray 1`] = `
<Text.H1
  lightGray={true}
>
  test
</Text.H1>
`;

exports[`renders correctly H2 1`] = `
<Text.H2>
  test
</Text.H2>
`;

exports[`renders correctly H2 darkGray 1`] = `
<Text.H2
  darkGray={true}
>
  test
</Text.H2>
`;

exports[`renders correctly H2 lightGray 1`] = `
<Text.H2
  lightGray={true}
>
  test
</Text.H2>
`;

exports[`renders correctly H3 1`] = `
<Text.H3>
  test
</Text.H3>
`;

exports[`renders correctly H3 darkGray 1`] = `
<Text.H3
  darkGray={true}
>
  test
</Text.H3>
`;

exports[`renders correctly H3 lightGray 1`] = `
<Text.H3
  lightGray={true}
>
  test
</Text.H3>
`;

exports[`renders correctly Primary 1`] = `
<Text.Primary>
  test
</Text.Primary>
`;

exports[`renders correctly Primary darkGray 1`] = `
<Text.Primary
  darkGray={true}
>
  test
</Text.Primary>
`;

exports[`renders correctly Primary lightGray 1`] = `
<Text.Primary
  lightGray={true}
>
  test
</Text.Primary>
`;

exports[`renders correctly Secondary 1`] = `
<Text.Secondary>
  test
</Text.Secondary>
`;

exports[`renders correctly Secondary darkGray 1`] = `
<Text.Secondary
  darkGray={true}
>
  test
</Text.Secondary>
`;

exports[`renders correctly Secondary lightGray 1`] = `
<Text.Secondary
  lightGray={true}
>
  test
</Text.Secondary>
`;

exports[`renders correctly Tertiary 1`] = `
<Text.Tertiary>
  test
</Text.Tertiary>
`;

exports[`renders correctly Tertiary darkGray 1`] = `
<Text.Tertiary
  darkGray={true}
>
  test
</Text.Tertiary>
`;

exports[`renders correctly Tertiary lightGray 1`] = `
<Text.Tertiary
  lightGray={true}
>
  test
</Text.Tertiary>
`;
